more conversion tests, fixes and source formatting